# gggui

./: Cargo.toml  README.md
examples/: main.rs
src/: cache.rs  dag.rs  entry.rs  events.rs  identify_first_last.rs  lib.rs  loadable.rs  mod.rs  primitive.rs  qtree.rs  render.rs
src/components/: background.rs  clickable.rs  clipper.rs  drawing.rs  layout.rs  mod.rs
src/ecsui/: components.rs  dag.rs  entry.rs  mod.rs
src/ecsui/components/: background.rs  clickable.rs  clipper.rs  drawing.rs  layout.rs  mod.rs
src/ecsui/systems/: background_render.rs  clickable_event.rs  content_clip.rs  mod.rs  text_render.rs
src/ecsui/widgets/: button.rs  label.rs  linear.rs  mod.rs  scroll.rs  toggle.rs  window.rs
src/features/: gfx.fs  gfx.rs  gfx.vs  mod.rs  vulkano.fs  vulkano.rs  vulkano.vs  winit.rs
src/primitive/: color.rs  image.rs  mod.rs  patch.rs  rect.rs  text.rs
src/style/: default.rs  mod.rs
src/systems/: clickable_event.rs  content_clip.rs  drawing_render.rs  mod.rs  text_render.rs
src/widgets/: button.rs  flow.rs  frame.rs  grid.rs  input.rs  label.rs  lable.rs  linear.rs  menu.rs  mod.rs  scroll.rs  toggle.rs  window.rs
src/widgets/collection/: linear.rs  mod.rs
