[package]
name = "gggui"
version = "0.1.0"
authors = ["brambuurlage@gmail.com"]

[lib]
name = "gggui"
path = "./src/lib.rs"

[dependencies]
downcast = "0.9.1"
smallvec = "0.6.0"
rusttype = "0.3.0"
image = "0.18.0"
clipboard = "0.4.4"
winit = { version = "0.11.0", optional = true }
vulkano = { git = "https://github.com/Kurble/vulkano", optional = true }
vulkano-shader-derive = { git = "https://github.com/Kurble/vulkano", optional = true }

[features]
vulkano-renderer=["vulkano","vulkano-shader-derive"]
winit-events=["winit"]
